# python/trueforge_sdk/src/trueforge_sdk/types/__init__.py
@@ -58,7 +58,10 @@ if typing.TYPE_CHECKING:
     from .custom_model_provider import CustomModelProvider
     from .daytona_sandbox_provider_auth import DaytonaSandboxProviderAuth
     from .delete_agent_response import DeleteAgentResponse
+    from .delete_mcp_server_response import DeleteMcpServerResponse
+    from .delete_model_provider_response import DeleteModelProviderResponse
     from .delete_schedule_response import DeleteScheduleResponse
+    from .delete_skill_response import DeleteSkillResponse
     from .dynamic_sub_agents_config import DynamicSubAgentsConfig
     from .extended_chunk_delta_tool_call import ExtendedChunkDeltaToolCall
     from .file_content import FileContent
@@ -288,7 +291,10 @@ _dynamic_imports: typing.Dict[str, str] = {
     "CustomModelProvider": ".custom_model_provider",
     "DaytonaSandboxProviderAuth": ".daytona_sandbox_provider_auth",
     "DeleteAgentResponse": ".delete_agent_response",
+    "DeleteMcpServerResponse": ".delete_mcp_server_response",
+    "DeleteModelProviderResponse": ".delete_model_provider_response",
     "DeleteScheduleResponse": ".delete_schedule_response",
+    "DeleteSkillResponse": ".delete_skill_response",
     "DynamicSubAgentsConfig": ".dynamic_sub_agents_config",
     "ExtendedChunkDeltaToolCall": ".extended_chunk_delta_tool_call",
     "FileContent": ".file_content",
@@ -542,7 +548,10 @@ __all__ = [
     "CustomModelProvider",
     "DaytonaSandboxProviderAuth",
     "DeleteAgentResponse",
+    "DeleteMcpServerResponse",
+    "DeleteModelProviderResponse",
     "DeleteScheduleResponse",
+    "DeleteSkillResponse",
     "DynamicSubAgentsConfig",
     "ExtendedChunkDeltaToolCall",
     "FileContent",
